--- a/index.html
+++ b/index.html
@@ -1791,7 +1791,7 @@
                     
                 </div>
                 <div class="copyright aziz">
-                    test
+                    &copy; Forum Ensao Entreprises 2018. All rights reserved.
             </div>
             </div>
             
