--- a/index.html
+++ b/index.html
@@ -1800,7 +1800,7 @@
 
         
     	<script src="js/jquery-1.11.1.min.js"></script>
-        <script type="text/javascript" src="https://www.google.com/maps/embed/v1/MODE?key=AIzaSyBDzu1_b0iFig2lkT1vokE_4W0Bm575Wmg&parameters"></script>
+        <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
         <script src="js/jquery.themepunch.tools.min.js"></script>
         <script src="js/jquery.themepunch.revolution.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
