--- a/register.html
+++ b/register.html
@@ -8,6 +8,7 @@
                 	<h2 class="uppercase">Enregistrement</h2>
                     <p>Maecenas vitae tincidunt nibh. Praesent tristique lacus quis ante venenatis posuere. Aenean adipiscing dictum mollis. Suspendisse potenti. Proin pretium lectus ut leo fringilla mattis. Mauris ultrices rutrum sagittis. Pellentesque vitae nibh elit. Fusce lacinia, elit non iaculis fermentum, metus justo posuere neque, sed viverra ligula turpis sit amet quam. Integer ac risus libero. Curabitur sit amet sem leo</p>
                 </div>
+		    <form action="form.php">
                 <!-- REGISTER FORM -->
                 <div class="register-form col-lg-12">
                     <div class="control-group">
@@ -44,8 +45,9 @@
                     </div>
                 
                     <div class="col-lg-12 text-right">
-                        <button class="button button-big button-dark" onclick="contact_send();">SEND</button>
+                        <button class="button button-big button-dark" type="submit" onclick="contact_send();">SEND</button>
                     </div>
+			</form>
                 </div>
             </div>
         </div>
