--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <li><a data-toggle="elementscroll" href="#sponsors">Sponsors</a></li>
 
                 <li><a data-toggle="elementscroll" href="#register">Register</a></li>
-                <li><a data-toggle="elementscroll" href="#footer">Contact</a></li>
+                <li><a data-toggle="elementscroll" href="#footer">test</a></li>
               </ul>
             </div>
             
