--- a/index.html
+++ b/index.html
@@ -1601,44 +1601,26 @@
 <style>
 .jssorl-009-spin img{animation-name:jssorl-009-spin;animation-duration:1.6s;animation-iteration-count:infinite;animation-timing-function:linear}@keyframes jssorl-009-spin{from{transform:rotate(0);}to{transform:rotate(360deg);}}
 </style>
-<div id="sponsors-carousel" style="position:relative;margin:0 auto;top:0px;left:0px;width:980px;height:100px;overflow:hidden;visibility:hidden;">
+<div id="jssor_1" style="position:relative;margin:0 auto;top:0px;left:0px;width:980px;height:100px;overflow:hidden;visibility:hidden;">
 <!-- Loading Screen -->
 <div data-u="loading" class="jssorl-009-spin" style="position:absolute;top:0px;left:0px;width:100%;height:100%;text-align:center;background-color:rgba(0,0,0,0.7);">
 <img style="margin-top:-19px;position:relative;top:50%;width:38px;height:38px;" src="img/spin.svg" />
 </div>
 <div data-u="slides" style="cursor:default;position:relative;top:0px;left:0px;width:980px;height:100px;overflow:hidden;">
 <div data-p="30.00">
-<img data-u="image" src="img/001.jpg" />
+<img data-u="image" src="img/sponsor1.jpg" />
 </div>
 <div data-p="30.00">
-<img data-u="image" src="img/002.jpg" />
+<img data-u="image" src="img/sponsor2.jpg" />
 </div>
 <div data-p="30.00">
-<img data-u="image" src="img/003.jpg" />
+<img data-u="image" src="img/sponsor3.jpg" />
 </div>
 <div data-p="30.00">
-<img data-u="image" src="img/004.jpg" />
+<img data-u="image" src="img/sponsor4.jpg" />
 </div>
 <div data-p="30.00">
-<img data-u="image" src="img/009.jpg" />
-</div>
-<div data-p="30.00">
-<img data-u="image" src="img/010.jpg" />
-</div>
-<div data-p="30.00">
-<img data-u="image" src="img/019.jpg" />
-</div>
-<div data-p="30.00">
-<img data-u="image" src="img/020.jpg" />
-</div>
-<div data-p="30.00">
-<img data-u="image" src="img/021.jpg" />
-</div>
-<div data-p="30.00">
-<img data-u="image" src="img/022.jpg" />
-</div>
-<div data-p="30.00">
-<img data-u="image" src="img/024.jpg" />
+<img data-u="image" src="img/sponsor5.jpg" />
 </div>
 </div>
 </div>
