--- a/index.html
+++ b/index.html
@@ -1604,23 +1604,23 @@
 <div id="jssor_1" style="position:relative;margin:0 auto;top:0px;left:0px;width:980px;height:100px;overflow:hidden;visibility:hidden;">
 <!-- Loading Screen -->
 <div data-u="loading" class="jssorl-009-spin" style="position:absolute;top:0px;left:0px;width:100%;height:100%;text-align:center;background-color:rgba(0,0,0,0.7);">
-<img style="margin-top:-19px;position:relative;top:50%;width:38px;height:38px;" src="img/spin.svg" />
+<img style="margin-top:-19px;position:relative;top:50%;width:100px;height:100px;" src="img/spin.svg" />
 </div>
 <div data-u="slides" style="cursor:default;position:relative;top:0px;left:0px;width:980px;height:100px;overflow:hidden;">
 <div data-p="30.00">
-<img data-u="image" src="img/sponsor1.jpg" />
+<img data-u="image" src="img/sponsor1.png" />
 </div>
 <div data-p="30.00">
-<img data-u="image" src="img/sponsor2.jpg" />
+<img data-u="image" src="img/sponsor2.png" />
 </div>
 <div data-p="30.00">
-<img data-u="image" src="img/sponsor3.jpg" />
+<img data-u="image" src="img/sponsor3.png" />
 </div>
 <div data-p="30.00">
-<img data-u="image" src="img/sponsor4.jpg" />
+<img data-u="image" src="img/sponsor4.png" />
 </div>
 <div data-p="30.00">
-<img data-u="image" src="img/sponsor5.jpg" />
+<img data-u="image" src="img/sponsor5.png" />
 </div>
 </div>
 </div>
