--- a/index.html
+++ b/index.html
@@ -1612,13 +1612,13 @@
 <img style="margin-top:-19px;position:relative;top:50%;width:38px;height:38px;" src="img/spin.svg" />
 </div>
 <div data-u="slides" style="cursor:default;position:relative;top:0px;left:0px;width:1000px;height:100px;overflow:hidden;">
-<div data-p="30.00">
+<div class="sponsor" data-p="30.00">
 <img data-u="image" src="img/sponsor1.png" />
 </div>
 <div data-p="30.00">
 <img data-u="image" src="img/sponsor2.png" />
 </div>
-<div data-p="30.00">
+<div class="sponsor" data-p="30.00">
 <img data-u="image" src="img/sponsor3.png" />
 </div>
 <div data-p="30.00">
