--- a/index.html
+++ b/index.html
@@ -1611,7 +1611,7 @@
 <div data-u="loading" class="jssorl-009-spin" style="position:absolute;top:0px;left:0px;width:100%;height:100%;text-align:center;background-color:rgba(0,0,0,0.7);">
 <img style="margin-top:-19px;position:relative;top:50%;width:38px;height:38px;" src="img/spin.svg" />
 </div>
-<div data-u="slides" style="cursor:default;position:relative;top:0px;left:0px;width:1000px;height:100px;overflow:hidden;">
+<div data-u="slides" id="sponsors-carousel">
 <div class="sponsor" data-p="30.00">
 <img data-u="image" src="img/sponsor1.png" />
 </div>
