--- a/speaker-detail.html
+++ b/speaker-detail.html
@@ -1,3 +1,8 @@
+
+
+
+
+
 <div class="container">
 	<div class="row">
         <div id="speaker-detail" class="col-lg-10 col-lg-offset-1">
@@ -9,7 +14,7 @@
                 </div>
                     
                 <div class="col-md-7 col-lg-7">
-                    <h2>Stanley<span>Willis</span></h2>
+                    <h2>Younes<span>Moumen</span></h2>
                     <p class="lead">Executive Creative Director of <strong>Interdum Co.</strong></p>
                     <ul class="social list-inline list-unstyled">
                     	<li><a href=""><i class="fa fa-2x fa-facebook-square"></i></a></li>
